tests/repr/invalid-repr-width-2.stderr
error[E0277]: the trait bound `[(); 32]: IsU64Compatible` is not satisfied
 --> $DIR/invalid-repr-width-2.rs:4:8
  |
4 | #[repr(u64)] // Too many bits!
  |        ^^^ the trait `IsU64Compatible` is not implemented for `[(); 32]`
  |
  = help: the following implementations were found:
            <[(); 64] as IsU64Compatible>
  = help: see issue #48214
  = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
